// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialLetter renders 0 1`] = `
Array [
  .c0 {
  initial-letter: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders function 1`] = `
Array [
  .c0 {
  initial-letter: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: has;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: has;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders invalid theme path 1`] = `
Array [
  .c0 {
  initial-letter: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders negative number 1`] = `
Array [
  .c0 {
  initial-letter: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  initial-letter: July;
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: July;
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    initial-letter: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    initial-letter: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  initial-letter: July;
}

@media May {
  .c0 {
    initial-letter: August;
  }
}

@media April {
  .c0 {
    initial-letter: September;
  }
}

@media January {
  .c0 {
    initial-letter: November;
  }
}

@media April {
  .c0 {
    initial-letter: August;
  }
}

@media June {
  .c0 {
    initial-letter: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: July;
}

@media May {
  .c0 {
    initial-letter: August;
  }
}

@media April {
  .c0 {
    initial-letter: September;
  }
}

@media January {
  .c0 {
    initial-letter: November;
  }
}

@media April {
  .c0 {
    initial-letter: August;
  }
}

@media June {
  .c0 {
    initial-letter: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letter: November;
  }
}

@media April {
  .c0 {
    initial-letter: January;
  }
}

@media January {
  .c0 {
    initial-letter: December;
  }
}

@media April {
  .c0 {
    initial-letter: April;
  }
}

@media June {
  .c0 {
    initial-letter: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letter: November;
  }
}

@media April {
  .c0 {
    initial-letter: January;
  }
}

@media January {
  .c0 {
    initial-letter: December;
  }
}

@media April {
  .c0 {
    initial-letter: April;
  }
}

@media June {
  .c0 {
    initial-letter: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    initial-letter: July;
  }
}

@media April {
  .c0 {
    initial-letter: August;
  }
}

@media January {
  .c0 {
    initial-letter: September;
  }
}

@media April {
  .c0 {
    initial-letter: November;
  }
}

@media June {
  .c0 {
    initial-letter: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    initial-letter: July;
  }
}

@media April {
  .c0 {
    initial-letter: August;
  }
}

@media January {
  .c0 {
    initial-letter: September;
  }
}

@media April {
  .c0 {
    initial-letter: November;
  }
}

@media June {
  .c0 {
    initial-letter: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letter: January;
  }
}

@media April {
  .c0 {
    initial-letter: December;
  }
}

@media January {
  .c0 {
    initial-letter: April;
  }
}

@media April {
  .c0 {
    initial-letter: May;
  }
}

@media June {
  .c0 {
    initial-letter: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letter: January;
  }
}

@media April {
  .c0 {
    initial-letter: December;
  }
}

@media January {
  .c0 {
    initial-letter: April;
  }
}

@media April {
  .c0 {
    initial-letter: May;
  }
}

@media June {
  .c0 {
    initial-letter: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders postitive number 1`] = `
Array [
  .c0 {
  initial-letter: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders string 1`] = `
Array [
  .c0 {
  initial-letter: July;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: July;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: June;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: June;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetter renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`initialLetter renders valid theme path 1`] = `
Array [
  .c0 {
  initial-letter: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
